Fixed bounds bug when jumping, made pause more powerfull, CSS fixes, minor redundancy elimination, started handshake function.

--- a/less/styles.less
+++ b/less/styles.less
@@ -2,6 +2,7 @@ html {
   background-color: #d1d1d1;
   margin: 0;
   padding: 0;
+  user-select: none;
 }
 
 body {
